--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,6 +1,7 @@
 html 
 {
   font-size: 16px; /* 1rem = 16px */
+  scroll-behavior: smooth;
 }
 
 :root 
@@ -217,9 +218,9 @@ header.hidden
   transform: translateY(-100%);
 }
 
-.mainTitle
+#mainTitle
 {
-  color: black;
+  color: white;
   text-align: center;
   font-size: 8rem;
   font-weight: normal;
@@ -229,8 +230,22 @@ header.hidden
   transform: translate(-50%, -50%); 
   z-index: 10;         
   letter-spacing: 0.15em;
-  grid-column: 1/5;
-  grid-row: 2/3;
+  grid-column: 1/5; 
+  grid-row: 2/3; 
+}
+
+.upperQuote
+{
+  color: white;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: normal;
+  position: absolute;
+  top: 70%;
+  left: 50%;           
+  transform: translate(-50%, -50%); 
+  z-index: 10;         
+  letter-spacing: 0.15em;
 }
 
 .headerImg
@@ -246,122 +261,396 @@ header.hidden
   grid-column: 1/5;
   grid-row: 3/4;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto auto auto;
   column-gap: 10rem;
 }
 
-.secondTitle
+/* BOOKS */
+
+.bookPart
 {
-  grid-column: 1/6;
+  grid-column: 1;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  column-gap: 2rem;
+  align-items: center;
+  padding: 2rem 0;
+  padding-right: 2rem
+}
+
+.mainStoryLink, .silentStoryLink
+{
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.mainStoryLink
+{
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.silentStoryLink
+{
+  grid-column: 3/5;
+  grid-row: 3/4;
+}
+
+.bookTitle
+{
+  grid-column: 2/5;
   grid-row: 1/2;
   color: white;
   text-align: center;
-  font-size: 6.25rem;
+  font-size: 6rem;
   font-weight: normal;
-  letter-spacing: 0.15em;
+  margin: 0;
 }
 
-.bookStack 
+.bookText
 {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  position: relative;
-  width: 17rem;
+  grid-column: 2/5;
+  grid-row: 2/3;
+  color: white;
+  text-align: left;
+  font-size: 2rem;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.bookCover
+{
+  grid-column: 1/2;
+  grid-row: 1/3;
+  justify-self: center;
+  align-self: center;
+  max-width: 100%;
   height: auto;
-  min-height: 26.0625rem;
-  margin: 0 auto;
 }
 
-.bookStack a 
+hr
 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 0.5s ease, z-index 0s ease 0.5s;
+  border: 0;
+  border-top: 0.1rem solid white;
+  width: 90%;
+  margin: 2rem auto;
 }
 
-.bookOneCover 
+/* NATIONS */
+
+.eperiletPart
 {
-  position: relative; 
-  z-index: 3;         
-  transform: scale(1) translateX(0) translateY(0);
+  grid-column: 1;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto auto auto;
+  column-gap: 5rem;
+  align-items: center;
+  padding: 2rem 5rem;
 }
 
-.bookTwoCover 
+.nationsLink
 {
-  position: absolute;
-  z-index: 2;
-  transform: scale(1) translateX(0) translateY(0);
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: normal;
+  grid-column: 1/2;
+  grid-row: 3/4;
 }
 
-.bookThreeCover 
+.eperiletTitle
 {
-  position: absolute;
-  z-index: 1;
-  transform: scale(1) translateX(0) translateY(0);
+  grid-column: 1/2;
+  grid-row: 1/2;
+  color: white;
+  text-align: center;
+  font-size: 6rem;
+  font-weight: normal;
+  margin: 0;
 }
 
-.bookStack:hover .bookOneCover 
+.eperiletText
 {
-  transform: scale(1) translateX(-7rem) translateY(0);
+  grid-column: 1/2;
+  grid-row: 2/3;
+  color: white;
+  text-align: left;
+  font-size: 2rem;
+  font-weight: normal;
+  margin: 0;
+  padding: 2rem 0;
 }
 
-.bookStack:hover .bookTwoCover 
-{
-  transform: scale(0.90) translateX(0) translateY(0.3125rem);
-}
-
-.bookStack:hover .bookThreeCover 
-{
-  transform: scale(0.80) translateX(7rem) translateY(0.625rem);
-}
-
-.bookStack img 
-{
-  width: 100%;
-  display: block;
-}
-
-/* Silent Stories */
-.bookStack.ss 
-{
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
-}
-
-/* Lost Pages */
-.bookStack.lp 
-{
-  grid-column: 4 / 5;
-  grid-row: 2 / 3;
-}
-
-.msText
+.map
 {
   grid-column: 2/3;
-  grid-row: 3/4; 
+  grid-row: 1/3;
+  justify-self: center;
+  align-self: center;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
-.ssText
+/* CHARACTERS */
+
+.charactersPart
 {
-  grid-column: 3/4;
-  grid-row: 3/4; 
+  grid-column: 1;
+  grid-row: 5/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  column-gap: 2rem;
+  align-items: center;
+  padding: 2rem 0;
+  padding-right: 2rem
 }
 
-.lpText
+.allCharactersLink
 {
-  grid-column: 4/5;
-  grid-row: 3/4; 
-}
-
-.lpText, .ssText, .msText
-{ 
+  color: white;
   text-align: center;
-  color:white;
-  text-decoration: none;
-  font-size: 2.25rem;
-  letter-spacing: 0.05em;
+  font-size: 2rem;
+  font-weight: normal;
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.charactersTitle
+{
+  grid-column: 2/3;
+  grid-row: 1/2;
+  color: white;
+  text-align: center;
+  font-size: 6rem;
+  font-weight: normal;
+  margin: 0;
+}
+
+.charactersText
+{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  color: white;
+  text-align: left;
+  font-size: 2rem;
+  font-weight: normal;
+  margin: 0;
+  padding: 2rem 0;
+}
+
+.characterSlides
+{
+  grid-column: 1/2;
+  grid-row: 1/3;
+  justify-self: center;
+  align-self: center;
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  height: 550px;
+  overflow: hidden;
+}
+
+.characterSlide {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;   /* tekst onderaan */
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.8s ease;
+}
+
+.characterSlide.active {
+  opacity: 1;
+}
+
+.characterSlide img 
+{
+  width: 100%;
+  max-height: 480px;
+  object-fit: contain;
+}
+
+.characterCredit 
+{
+  color: white;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+/* PROJECTS */
+
+.projectsPart
+{
+  grid-column: 1;
+  grid-row: 7/8;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  column-gap: 5rem;
+  align-items: center;
+  padding: 2rem 5rem;
+}
+
+.gameSubPart, .skinsSubPart
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+}
+
+.gameSubPart
+{
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.gameProjectLink, .skinsLink
+{
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: normal;
+  grid-column: 1/4;
+  grid-row: 3/4;
+}
+
+.projectsTitle
+{
+  grid-column: 1;
+  grid-row: 1/2;
+  color: white;
+  text-align: center;
+  font-size: 6rem;
+  font-weight: normal;
+  margin: 0;
+  padding-bottom: 2rem;
+}
+
+.gameText, .skinsText
+{
+  color: white;
+  text-align: left;
+  font-size: 2rem;
+  font-weight: normal;
+  margin: 0;
+  padding: 1rem 0;
+}
+
+.gameTitle, .skinsTitle
+{
+  color: white;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: normal;
+  margin: 0;
+}
+
+.gameTitle
+{
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+
+.gameText
+{
+  grid-column: 1/4;
+  grid-row: 2/3;
+}
+
+.gameImg
+{
+  float: left;            
+  width: 400px;
+  margin: 0 2rem 1rem 0;
+}
+
+.skinsSubPart
+{
+  grid-column: 1/2;
+  grid-row: 3/4;
+  padding-top: 5rem;
+}
+
+.skinsTitle
+{
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+
+.skinsText
+{
+  grid-column: 1/4;
+  grid-row: 2/3;
+}
+
+.skinsImg
+{
+  float: right;            
+  width: 400px;
+  margin: 0 0 1rem 2rem;
+}
+
+/* UPDATE LOG */
+
+.updateLog
+{
+  grid-column: 1;
+  grid-row: 9/10;
+  text-align: center;
+  font-size: 1.5rem;
+  color: white;
+  display: grid;
+  grid-template-rows: auto auto auto auto auto;
+  padding: 5rem 5rem;
+}
+
+.updateBox
+{
+  padding: 1.5rem;
+}
+
+.updateBox h2
+{
+  text-align: center;
+  font-weight: normal;
+  color: white;
+}
+
+.updateText
+{
+  font-size: 1.5rem;
+  padding: 2rem 0;
+}
+
+.backButton
+{ 
+  color: white; 
+  background-color: black; 
+  text-align: center; 
+  font-size: 2.25rem; 
+  font-weight: normal; 
+  letter-spacing: 0.15em; 
+  grid-column: 1; 
+  grid-row: 10/11; 
+  text-decoration: none; 
+  justify-self: center;
+  align-self: center; 
+  z-index: 10;
+  padding-bottom: 2rem;
 }
 
 footer
@@ -409,7 +698,7 @@ footer
 
 @media (max-width: 768px) 
 {
-  .mainTitle 
+  #mainTitle 
   {
     position: relative;     
     top: auto;
@@ -418,17 +707,188 @@ footer
     text-align: center;
     font-size: 3rem;        
     margin: 3rem 0;  
-    color: black !important;     
+    color: white !important;     
   }
 
-  .secondTitle 
+  hr
   {
-    font-size: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .upperQuote
+  {
+    font-size: 1rem;
+    padding-bottom: 65%;
+  }
+
+  .bookTitle, 
+  .eperiletTitle, 
+  .charactersTitle, 
+  .projectsTitle
+  {
+    font-size: 2rem;
+  }
+
+  .bookPart,
+  .eperiletPart,
+  .charactersPart, 
+  .projectsPart, 
+  .updateLog
+  {
+    margin: 0;
+    padding: 0 2rem;
+  }
+
+  .charactersTitle
+  {
+    grid-column: 1/3;
   }
   
-  .lpText, .ssText, .msText 
+  .charactersText
   {
-    font-size: 2.25rem;
+    grid-column: 1/3;
+    grid-row: 3/4;
+    text-align: left;
+  }
+
+  .allCharactersLink
+  {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    text-align: center;
+  }
+
+  .characterSlides
+  {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    max-height: 350px;
+  }
+
+  .updateText, 
+  .updateLog h2, 
+  #updateInfo
+  {
+    padding: 0;
+    margin: 0;
+  }
+
+  .gameTitle, 
+  .skinsTitle
+  {
+    font-size: 1.75rem;
+  }
+  
+  .bookText, 
+  .eperiletText, 
+  .charactersText, 
+  .gameText, 
+  .skinsText,
+  .updateText,
+  #updateInfo
+  {
+    font-size: 1rem;
+  }
+
+  .mainStoryLink,
+  .silentStoryLink,
+  .nationsLink,
+  .allCharactersLink,
+  .gameProjectLink,
+  .skinsLink
+  {
+    font-size: 1rem;
+  }
+
+  .bookCover,
+  .map,
+  .characterSlide img,
+  .gameImg,
+  .skinsImg
+  {
+    max-width: 50%;
+  }
+
+  .gameImg
+  {
+    margin-right: 0.5rem;
+    margin-bottom: 0;
+  }
+
+  .skinsImg
+  {
+    margin-left: 0.5rem;
+    margin-bottom: 0;
+  }
+
+
+  .bookPart
+  {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .bookCover 
+  {
+    padding-top: 1rem;
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+
+  .bookTitle 
+  {
+    padding-top: 1rem;
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+
+  .bookText
+  {
+    grid-column: 1/4;
+    grid-row: 3/4;
+    padding: 1rem 0;
+  }
+
+  .mainStoryLink
+  {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+
+   .silentStoryLink
+  {
+    grid-column: 2/4;
+    grid-row: 4/5;
+  }
+
+  .eperiletTitle
+  {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+
+  .map 
+  {
+    padding-top: 1rem;
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+
+  .eperiletText
+  {
+    grid-column: 1/4;
+    grid-row: 3/4;
+  }
+
+  .nationsLink
+  {
+    grid-column: 1/4;
+    grid-row: 4/5;
+  }
+
+  .backButton
+  {
+    font-size: 1.5rem;
   }
 
   .middleBlock 
@@ -437,27 +897,6 @@ footer
     flex-direction: column;  
     gap: 2rem;             
     align-items: center;
-  }
-
-  .bookTwoCover,
-  .bookThreeCover 
-  {
-    display: none;
-  }
-
-  .bookStack 
-  {
-    display: block;
-    width: 80%;
-    margin: 2rem auto;
-    position: relative;
-  }
-
-  .bookStack a.bookOneCover 
-  {
-    position: relative;
-    width: 100%;
-    transform: none;
   }
 
   header 
