--- a/css/nations.css
+++ b/css/nations.css
@@ -583,6 +583,11 @@ footer
     padding-bottom: 2rem;
     font-size: 2rem;
   }
+
+  .backButton
+  { 
+    padding-top: 2rem;
+  }
   
   .dcLogo 
   {
