--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -856,39 +856,39 @@ footer
 
   .bookPart
   {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 2fr 1fr;
   }
 
   .bookCover 
   {
     padding-top: 1rem;
-    grid-column: 1/4;
+    grid-column: 1/5;
     grid-row: 2/3;
   }
 
   .bookTitle 
   {
     padding-top: 1rem;
-    grid-column: 1/4;
+    grid-column: 1/5;
     grid-row: 1/2;
   }
 
   .bookText
   {
-    grid-column: 1/4;
+    grid-column: 1/5;
     grid-row: 3/4;
     padding: 1rem 0;
   }
 
   .mainStoryLink
   {
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 4/5;
   }
 
    .silentStoryLink
   {
-    grid-column: 2/4;
+    grid-column: 3/4;
     grid-row: 4/5;
   }
 
