--- a/nationPages/nation.css
+++ b/nationPages/nation.css
@@ -409,7 +409,7 @@ header.hidden
   letter-spacing: 0.15em;
 }
 
-.secondTitleRiimut
+.secondTitleSmaller
 {
   grid-column: 1/5;
   grid-row: 1/2;
@@ -783,7 +783,7 @@ footer
     margin: 1rem 0;
   }
 
-  .secondTitleRiimut
+  .secondTitleSmaller
   {
     font-size: 3rem;
   }
