--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -230,7 +230,7 @@ header.hidden
 
 .mainTitle 
 { 
-  color: black;
+  color: white;
   text-align: center; 
   font-size: 8rem; 
   font-weight: normal; 
@@ -389,7 +389,7 @@ footer
     text-align: center;
     font-size: clamp(2rem, 6vw, 6rem);     
     margin: 3rem 0;  
-    color: black !important;     
+    color: white !important;     
   }
 
   .secondTitle 
