--- a/css/storyInfo.css
+++ b/css/storyInfo.css
@@ -215,7 +215,7 @@ header.hidden
 
 .mainTitle 
 { 
-  color: black;
+  color: white;
   text-align: center; 
   font-size: 8rem; 
   font-weight: normal; 
@@ -520,7 +520,7 @@ footer
     text-align: center;
     font-size: clamp(2rem, 6vw, 6rem);        
     margin: 3rem 0;  
-    color: black !important;     
+    color: white !important;     
   }
 
   .secondTitle 
